// =====================================================
// CommercialNews — Notifications Module (V1) — dbdiagram.io
// File: explanation/architecture/arc42/diagrams/erd/notifications-v1.dbml
//
// Purpose
// - Reliable async emails using Outbox + delivery state machine.
// - Core flows write business truth + outbox only; worker drives sending & retries.
// - Two-layer idempotency:
//   1) message-level dedupe
//   2) business-intent dedupe
//
// V1 goals
// - Non-blocking notification delivery
// - Durable delivery-state truth
// - Safe retry / dead / ambiguous handling
// - Minimal ops visibility + future-ready design
//
// Important rules
// - Never store raw secrets/tokens in payloads/errors.
// - Provider timeout is ambiguous; do not assume "not sent".
// - Redis is supplementary only, not canonical harmful-duplicate protection.
// =====================================================

Enum OutboxStatusEnum {
  Pending
  Processing
  Processed
  Failed
}

Enum EmailDeliveryStatusEnum {
  Queued
  Sending
  Sent
  Failed
  Dead
  Suppressed
  Ambiguous
}

Enum EmailAttemptOutcomeEnum {
  Sent
  Failed
  Timeout
  Suppressed
  Skipped
  ProviderRejected
}

Enum EmailErrorClassEnum {
  Transient
  Permanent
  Ambiguous
  Policy
  Template
  Provider
  Validation
}

Table OutboxMessage {
  OutboxId bigint [pk, increment]

  // Message-level dedupe / event identity
  MessageKey uniqueidentifier [not null, default: `NEWID()`]
  EventId uniqueidentifier [not null]

  EventType nvarchar(120) [not null]        // Auth.EmailVerificationRequested, Auth.PasswordResetRequested, Content.ArticlePublished
  AggregateType nvarchar(60) [not null]     // User, Article
  AggregateId nvarchar(100) [not null]      // cross-module id as string

  CorrelationId nvarchar(100) [null]

  PayloadJson nvarchar(max) [not null]      // minimal + redacted (no raw tokens/secrets)
  Priority tinyint [not null, default: 5]   // 1 = highest
  OccurredAt datetime2(3) [not null, default: `SYSUTCDATETIME()`]

  Status varchar(20) [not null, default: "Pending"] // Pending/Processing/Processed/Failed
  RetryCount int [not null, default: 0]
  NextRetryAt datetime2(3) [null]
  LastError nvarchar(500) [null]            // redacted/sanitized
  LastErrorCode nvarchar(100) [null]
  LastErrorClass varchar(30) [null]         // EmailErrorClassEnum
  ProcessedAt datetime2(3) [null]

  // Claim / lease hooks to avoid naive Processing-state assumptions
  ClaimedAt datetime2(3) [null]
  ClaimedBy nvarchar(100) [null]
  ProcessingLeaseUntil datetime2(3) [null]

  // V2 hooks
  PartitionKey nvarchar(100) [null]
  ExpiresAt datetime2(3) [null]

  Indexes {
    (MessageKey) [unique, name: "UQ_Outbox_MessageKey"]
    (EventId) [unique, name: "UQ_Outbox_EventId"]

    // worker backlog pull
    (Status, Priority, NextRetryAt) [name: "IX_Outbox_Status_Priority_NextRetryAt"]

    (OccurredAt) [name: "IX_Outbox_OccurredAt"]
    (AggregateType, AggregateId, OccurredAt) [name: "IX_Outbox_Aggregate"]
    (CorrelationId, OccurredAt) [name: "IX_Outbox_CorrelationId_OccurredAt"]
    (ClaimedBy, ProcessingLeaseUntil) [name: "IX_Outbox_ClaimedBy_ProcessingLeaseUntil"]
  }

  Note: "Durable async intent. Raw verification/reset tokens must never be stored here. Processing must use claim/lease semantics rather than naive singleton assumptions."
}

Table EmailDelivery {
  EmailDeliveryId bigint [pk, increment]

  // Message-level identity (one outbox message / event envelope -> at most one canonical EmailDelivery row)
  MessageKey uniqueidentifier [not null]
  EventId uniqueidentifier [not null]

  // Business-intent dedupe (canonical harmful-duplicate protection)
  // Example:
  // - verify-email|user:u123|token:t789
  // - reset-password|user:u123|token:r456
  // - new-article|user:u123|article:a456|pubver:7
  BusinessDedupeKey nvarchar(300) [not null]

  CorrelationId nvarchar(100) [null]

  RecipientUserId nvarchar(100) [null]      // external ref -> Identity.UserAccount (string/public id safe)
  ToEmail nvarchar(320) [not null]          // actual recipient (PII; never expose raw by default in admin APIs)
  ToEmailHash varchar(64) [null]            // sha-256/hex or similar for safer ops lookups

  TemplateKey nvarchar(80) [not null]       // VerifyEmail/ResetPassword/NewArticle
  TemplateVersion int [null]                // V2-ready
  Subject nvarchar(200) [null]

  Provider varchar(30) [not null, default: "smtp"] // smtp/sendgrid/...
  ProviderMessageId nvarchar(120) [null]           // optional for ops if policy allows

  Status varchar(20) [not null, default: "Queued"] // Queued/Sending/Sent/Failed/Dead/Suppressed/Ambiguous

  AttemptCount int [not null, default: 0]
  LastAttemptAt datetime2(3) [null]
  NextRetryAt datetime2(3) [null]

  SentAt datetime2(3) [null]
  FailedAt datetime2(3) [null]
  DeadAt datetime2(3) [null]
  SuppressedAt datetime2(3) [null]
  AmbiguousAt datetime2(3) [null]

  LastError nvarchar(500) [null]            // redacted only
  LastErrorCode nvarchar(100) [null]
  LastErrorClass varchar(30) [null]         // EmailErrorClassEnum

  CreatedAt datetime2(3) [not null, default: `SYSUTCDATETIME()`]
  UpdatedAt datetime2(3) [not null, default: `SYSUTCDATETIME()`]

  // V2 hooks
  PublishedVersion bigint [null]            // useful for article-publish notification intents
  ExpiresAt datetime2(3) [null]             // retention / staleness hook

  Indexes {
    (MessageKey) [unique, name: "UQ_EmailDelivery_MessageKey"]
    (BusinessDedupeKey) [unique, name: "UQ_EmailDelivery_BusinessDedupeKey"]

    (Status, NextRetryAt, LastAttemptAt) [name: "IX_EmailDelivery_Status_NextRetryAt_LastAttemptAt"]
    (RecipientUserId, CreatedAt) [name: "IX_EmailDelivery_RecipientUserId_CreatedAt"]
    (TemplateKey, CreatedAt) [name: "IX_EmailDelivery_TemplateKey_CreatedAt"]
    (EventId, CreatedAt) [name: "IX_EmailDelivery_EventId_CreatedAt"]
    (CorrelationId, CreatedAt) [name: "IX_EmailDelivery_CorrelationId_CreatedAt"]
    (ToEmailHash, CreatedAt) [name: "IX_EmailDelivery_ToEmailHash_CreatedAt"]
    (Provider, Status, LastAttemptAt) [name: "IX_EmailDelivery_Provider_Status_LastAttemptAt"]
  }

  Note: "Canonical delivery-state truth. MessageKey = message-level identity for one canonical row per envelope. BusinessDedupeKey = harmful-duplicate protection across retry/replay. Sending is recoverable/transient, not proof of provider certainty."
}

Table EmailDeliveryAttempt {
  EmailDeliveryAttemptId bigint [pk, increment]

  EmailDeliveryId bigint [not null]
  AttemptNumber int [not null]

  StartedAt datetime2(3) [not null, default: `SYSUTCDATETIME()`]
  FinishedAt datetime2(3) [null]

  Outcome varchar(30) [not null]            // EmailAttemptOutcomeEnum
  IsAmbiguous bit [not null, default: 0]

  ProviderMessageId nvarchar(120) [null]
  ProviderErrorCode nvarchar(100) [null]
  ErrorClass varchar(30) [null]             // EmailErrorClassEnum
  ErrorDetail nvarchar(500) [null]          // redacted/sanitized only

  CorrelationId nvarchar(100) [null]
  CreatedAt datetime2(3) [not null, default: `SYSUTCDATETIME()`]

  Indexes {
    (EmailDeliveryId, AttemptNumber) [unique, name: "UQ_EmailDeliveryAttempt_EmailDeliveryId_AttemptNumber"]
    (EmailDeliveryId, StartedAt) [name: "IX_EmailDeliveryAttempt_EmailDeliveryId_StartedAt"]
    (Outcome, StartedAt) [name: "IX_EmailDeliveryAttempt_Outcome_StartedAt"]
    (IsAmbiguous, StartedAt) [name: "IX_EmailDeliveryAttempt_IsAmbiguous_StartedAt"]
  }

  Note: "Attempt-level operational history. Duplicate suppression observations may be recorded here only if explicitly modeled as non-send attempts."
}

Table EmailSuppression {
  EmailSuppressionId bigint [pk, increment]

  RecipientUserId nvarchar(100) [null]
  ToEmailHash varchar(64) [not null]

  Reason nvarchar(120) [null]               // Bounce/Complaint/Manual/Policy/...
  IsActive bit [not null, default: 1]

  CreatedAt datetime2(3) [not null, default: `SYSUTCDATETIME()`]
  ExpiresAt datetime2(3) [null]

  CreatedByUserId nvarchar(100) [null]      // operator/admin if manual
  RemovedAt datetime2(3) [null]
  RemovedByUserId nvarchar(100) [null]

  CorrelationId nvarchar(100) [null]

  Indexes {
    (ToEmailHash, IsActive) [name: "IX_EmailSuppression_ToEmailHash_IsActive"]
    (RecipientUserId, IsActive) [name: "IX_EmailSuppression_RecipientUserId_IsActive"]
  }

  Note: "Optional but recommended. Supports suppressed delivery outcome and admin unsuppress operation. SQL should enforce at most one active suppression row per ToEmailHash (prefer filtered unique index WHERE IsActive = 1)."
}

Table EmailRateLimitLog {
  RateLogId bigint [pk, increment]

  RecipientUserId nvarchar(100) [null]
  Endpoint nvarchar(60) [not null]          // register/forgot/resend
  ToEmailHash varchar(64) [null]
  IpAddress nvarchar(45) [null]

  Allowed bit [not null, default: 1]
  Reason nvarchar(120) [null]               // RateLimited/Blocked/...
  DecisionKey nvarchar(150) [null]          // helpful for investigations
  OccurredAt datetime2(3) [not null, default: `SYSUTCDATETIME()`]
  CorrelationId nvarchar(100) [null]

  Indexes {
    (RecipientUserId, OccurredAt) [name: "IX_RateLog_RecipientUserId_OccurredAt"]
    (IpAddress, OccurredAt) [name: "IX_RateLog_IpAddress_OccurredAt"]
    (Endpoint, OccurredAt) [name: "IX_RateLog_Endpoint_OccurredAt"]
    (ToEmailHash, OccurredAt) [name: "IX_RateLog_ToEmailHash_OccurredAt"]
  }

  Note: "Optional and observational only. Primary rate limiting remains app-layer/Redis; DB log supports investigations and should prefer hashed recipient identifiers."
}

// ---------- External stubs (ERD readability only) ----------
Table IdentityUserAccount {
  UserId nvarchar(100) [pk]
  Note: "EXTERNAL (Identity module). Stub for ERD readability only."
}

// ---------- Relationships ----------
Ref: EmailDelivery.MessageKey > OutboxMessage.MessageKey
Ref: EmailDelivery.EventId > OutboxMessage.EventId
Ref: EmailDeliveryAttempt.EmailDeliveryId > EmailDelivery.EmailDeliveryId
Ref: EmailDelivery.RecipientUserId > IdentityUserAccount.UserId
Ref: EmailSuppression.RecipientUserId > IdentityUserAccount.UserId
Ref: EmailRateLimitLog.RecipientUserId > IdentityUserAccount.UserId

// ---------- SQL Server enforcement notes ----------
// 1) CHECK OutboxMessage.Status IN ('Pending','Processing','Processed','Failed')
// 2) CHECK EmailDelivery.Status IN ('Queued','Sending','Sent','Failed','Dead','Suppressed','Ambiguous')
// 3) CHECK EmailDeliveryAttempt.Outcome IN ('Sent','Failed','Timeout','Suppressed','Skipped','ProviderRejected')
// 4) CHECK LastErrorClass / ErrorClass values follow EmailErrorClassEnum
// 5) CHECK AttemptCount >= 0 and RetryCount >= 0 and AttemptNumber > 0
// 6) Sent is terminal. Dead is terminal. Suppressed is terminal by policy.
// 7) PayloadJson, ErrorDetail, LastError must be redacted (no raw tokens/secrets).
// 8) Redis may be used for hot dedupe/rate limit, but durable duplicate protection lives in SQL.
// 9) BusinessDedupeKey must be canonical and stable per notification type.
// 10) EmailDelivery.MessageKey uniqueness means one outbox message/event envelope produces at most one canonical EmailDelivery row.
// 11) Processing and Sending states must use claim/lease or stale-recovery rules; they are not safe permanence signals by themselves.
// 12) Prefer filtered unique index on EmailSuppression(ToEmailHash) WHERE IsActive = 1.
// 13) Attempt outcome -> delivery-state transition must be defined in service logic (for example Timeout may lead to Ambiguous by policy).